# Socratic

./: .gitignore  README.md  package.json  pyproject.toml
examples/repos/tau_airline/: flights_sample.json  reservations_sample.json  tool_book_reservation.txt  tool_cancel_reservation.txt  tool_get_reservation_details.txt  tool_get_user_details.txt  tool_list_all_airports.txt  tool_search_direct_flight.txt  tool_search_onestop_flight.txt  tool_send_certificate.txt  tool_transfer_to_human_agents.txt  tool_update_reservation_baggages.txt  tool_update_reservation_flights.txt  tool_update_reservation_passengers.txt  users_sample.json
socratic/: cli.py  compose.py  constants.py  create.py  ingest.py  synth.py
web/: package-lock.json  package.json
web/app/: config.js  globals.css  layout.jsx  nav.jsx  page.jsx  selected-files-context.jsx
web/app/api/compose/: sessionStore.js
web/app/api/compose/list/: route.js
web/app/api/compose/output/: route.js
web/app/api/compose/start/: route.js
web/app/api/compose/stream/: route.js
web/app/api/delete-concept/: route.js
web/app/api/dir/: route.js
web/app/api/dir-files/: route.js
web/app/api/file/: route.js
web/app/api/files/: route.js
web/app/api/ingest/: sessionStore.js
web/app/api/ingest/input/: route.js
web/app/api/ingest/start/: route.js
web/app/api/knowledge-base/: route.js
web/app/api/project-info/: route.js
web/app/api/synthesize/: sessionStore.js
web/app/compose/: page.jsx
web/app/ingest/: page.jsx
web/app/synthesize/: page.jsx
web/scripts/: dev-with-project.js
(+4 files in other folders)
